--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
+/* @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,400&family=Lato:wght@300;400;700&display=swap'); */
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -23,4 +24,30 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+} */
+
+:root {
+  --font-serif: "Cormorant Garamond", serif;
+  --font-sans: "Lato", sans-serif;
+}
+
+@theme {
+  --font-sans: 'Lato', 'sans-serif';
+  --font-serif: "Cormorant Garamond", 'serif';
+  --color-sage-50: #f4f7f4;
+  --color-sage-100: #e3ebe3;
+  --color-sage-200: #c5d8c5;
+  --color-sage-300: #9dbf9d;
+  --color-sage-400: #76a176;
+  --color-sage-500: #568556;
+  --color-sage-600: #436943;
+  --color-sage-800: #365136;
+  --color-sage-900: #2d422d;
+  --color-stone-50: #fafaf9;
+  --color-stone-100: #f5f5f4;
+  --color-stone-200: #e7e5e4;
+  --color-stone-800: #292524;
+  --color-stone-900: #1c1917;
+  --animate-fade-in: fadeIn 1.5s ease-out forwards;
+  --animate-fade-in-up: fadeInUp 1s ease-out forwards
 }
